Avoid horizontal scrolling when in tablet / phone mode
+ Remove gutters when on phone mode for extra space!

--- a/admin-dev/themes/new-theme/scss/components/layout/_content_div.scss
+++ b/admin-dev/themes/new-theme/scss/components/layout/_content_div.scss
@@ -6,12 +6,26 @@
 
   transition: padding .5s ease; // transition when collapsing the nav menu
 
-  .mobile & {
-    @include media-breakpoint-down(sm) {
-      padding-top: 10.4rem;
-    }
+  // with hidden navbar
+  @include media-breakpoint-down(md) {
+    padding-left: $grid-gutter-width / 2;
+  }
+
+  @include media-breakpoint-down(sm) {
+    padding-top: 10.4rem;
     padding-left: 0;
     padding-right: 0;
+
+    // remove gutters
+    .row {
+      margin-left: 0;
+      margin-right: 0;
+
+      [class*="col-"] {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
   }
 
   &.-notoolbar {
